--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width= , initial-scale=1.0">
-    <title>css basic</title>
-    <h1 align="center">CSS basic</h1>
+    <link rel="stylesheet" href="style.css">
+ <title>css basic</title>
+<h1 align="center">CSS typograpghy </h1>
 </head>
 <body>
-    
+   
+   <u>  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Smokum&display=swap" rel="stylesheet">
+<h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint cupiditate architecto quos iste doloribus quod placeat. Eaque, provident! Amet corrupti
+   qui quidem aliquam optio libero fugit velit iste iusto illo! </h2> </u>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700&display=swap" rel="stylesheet">
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae non inventore corrupti ipsum tenetur obcaecati aliquam deleniti? Id inventore ab, ipsam
+sapiente consequatur aliquam nemo tenetur magnam quasi recusandae at repellat. Eligendi illo ut voluptate temporibus excepturi tempore repellendus commodi cumque, alias explicabo, sit nesciunt dolore eos eveniet! Repellat, ab corrupti. Error beatae totam quae expedita non quam vitae magni at deleniti consectetur dolore quis, modi libero dolores sint sapiente accusamus eum suscipit autem deserunt nesciunt! Nam molestias cumque maxime, esse vitae libero. Necessitatibus nemo id beatae eos et. 
+ Distinctio dolorem aperiam ipsa, in illo deleniti odit dolor dolores sit!</p> 
 </body>
 </html>
